# mlops2025_MariamSrour

./: .gitignore  .ignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  run.py  run_batch_inference_pipeline.py  run_training_pipeline.py
.github/workflows/: ci.yml
config/: config.yaml
scripts/: __init__.py  batch_inference.py  feature_engineering.py  pipeline.py  preprocess.py  taxi_pipeline.py  train.py
src/ml_project/: cli.py
src/ml_project/features/: __init__.py  engineer.py
src/ml_project/inference/: __init__.py  inference.py
src/ml_project/pipelines/: pipeline.py
src/ml_project/preprocess/: __init__.py  processor.py
src/ml_project/train/: __init__.py  trainer.py
tests/: conftest.py  test_mlflow_load.py
tests/classes/: test_feature_engineer.py  test_inference_pipeline.py  test_model_trainer.py  test_pipeline.py  test_preprocess.py  test_preprocess_class.py
tests/scripts/: test_batch_inference.py  test_cli.py  test_feature_engineering_script.py  test_preprocess.py  test_training_script.py
