[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mariam-Srour2003", email = "mariammsrourr2020@gmail.com@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.5.3",
    "mlflow>=1.27.0",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.6.1",
    "shap>=0.49.1",
]

[project.scripts]
ml-project = "ml_project:main"
train = "mlproject.pipelines.run_training:main"
inference = "mlproject.pipelines.run_batch_inference:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"